--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -17057,6 +17057,18 @@
    "source": [
     "yellow_dict={yellow[0]:aux_list}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "yellow_2018_06=pd.read_csv('yellow_tripdata_2018-06.csv',encoding='latin1')\n",
+    "taxi_zones=pd.read_csv('taxi _zone_lookup.csv',encoding='latin1')\n",
+    "yellow_tz_2018_06 = yellow_2018_06.merge(taxi_zones,left_on='PULocationID', right_on='LocationID')"
+   ]
   }
  ],
  "metadata": {
@@ -17075,7 +17087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
